# Booking-email-checl

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Procfile  README.md  code_quality_report.md  core.mdc  docker-compose.yml  format_after_edit.py  guard_shell.py  gunicorn.conf.py  hooks.json  masterprompt_v2.md  pyproject.toml  railway.toml  release.yml  wsgi.py
.cursor/: hooks.json
.cursor/hooks/: format_after_edit.py  guard_shell.py
.github/workflows/: ci.yml  release.yml
adapters/: __init__.py  mail_connector.py  mail_ingestion.py  mail_presets.py  outlook_graph.py  outlook_ingestion.py
backend/ai/prompts/: __init__.py
backend/ai/services/: _chunk_packer.py  classification.py  entity_resolution.py  extraction.py  gemini_client.py  gemini_factory.py  gemini_setup.py  grounding.py  indexing.py  ingestion.py  llm_errors.py  mail_summary.py  mock_gemini.py  mock_llm.py  openai_client.py  prompt_loader.py  response_generation.py  retrieval.py  review_fallback.py  semantic_chunking.py  similarity_search.py  tenant_workflow_gemini.py  tenant_workflow_runtime.py  tenant_workflow_suggest_gemini.py  triage.py  triage_llm.py  validation.py
backend/ai/testing/: __init__.py  mock_gemini.py  mock_whatsapp.py
backend/ai/workflows/: checkpointer.py  email_workflow.py  helpers.py  routing.py  state.py
backend/api/: __init__.py  app.py
backend/api/auth/: __init__.py  account_access.py  routes.py  token_blocklist.py  tokens.py
backend/api/blueprints/: __init__.py  admin.py  admin_account_workflows.py  admin_diagnostics_routes.py  admin_llm_routes.py  admin_user_actions.py  bookings.py  costs.py  (+9 more)
backend/application/: __init__.py  ingestion.py  review.py
config/: __init__.py  factory.py  settings.py
docs/: AGENTS.md  ARCHITECTURE.md  COMPARISON.md  COST_TRIAGE.md  DEPLOYMENT.md  GEMINI.md  KICKOFF.md  LANGFUSE.md  OUTLOOK.md  PR_STEP_4_5.md  REUSE.md  ROADMAP.md  SPEC.md  USER_SETUP.md  VERIFICATION.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
frontend/scripts/: capture_readme_screenshots.mjs
frontend/src/: App.tsx  index.css  main.tsx
models/: email.py  entities.py  retrieval.py
observability/: __init__.py  alerts.py  langfuse_client.py  langfuse_setup.py  mail_cost.py
prompts/booking/: classify.md  draft.md  extract.md
repositories/: __init__.py  account_repository.py  email_repository.py  embedding_repository.py  entity_repository.py  extraction_repository.py  mail_connection_repository.py  mail_metrics_repository.py  mongo.py  platform_settings_repository.py  property_recipient_repository.py  review_repository.py  revoked_token_repository.py  user_repository.py
routers/: ingestion.py  review.py
schemas/: __init__.py
schemas/booking/: __init__.py  extraction.py
scripts/: backfill_mail_ingest_flags.py  backfill_mail_metrics.py  backfill_review_drafts.py  check_booking_mails.py  check_max_file_lines.py  clear_tenant_whatsapp_credentials.py  count_booking_mails.py  diagnose_env.py  docker-entrypoint.sh  fix_noise_intents.py  migrate_tenant_data.py  purge_non_booking_reviews.py  reindex_semantic_chunks.py  reset_whatsapp_token_from_db.py  restructure_backend.py  restructure_frontend.py  run_mail_poll.ps1  run_mail_poll.py  run_mail_poll_loop.ps1  run_mail_poll_loop.py  run_outlook_ingest.ps1  run_outlook_ingest.py  screenshot_demo_server.py  seed_admin.py  test_graph_mailbox.ps1  test_graph_mailbox_delegated.ps1  test_live_openai.py  test_whatsapp.py  verify_dashboard_api.py  verify_env.py
services/: __init__.py  booking_relevance.py  classification.py  data_wipe_service.py  effective_settings.py  extraction.py  grounding.py  indexing.py  ingestion.py  llm_errors.py  llm_types.py  mail_connection_service.py  mail_poll_service.py  mock_llm.py  notification_service.py  openai_client.py  prompt_loader.py  response_generation.py  retrieval.py  similarity_search.py  triage.py  validation.py
tests/: __init__.py  conftest.py  mocks.py  test_admin_overview_queries.py  test_alerts.py  test_booking_intent_fallback.py  test_booking_mail_counts.py  test_booking_relevance.py  test_checkpointer.py  test_classification.py  test_date_range.py  test_domain_collections.py  test_email_repository.py  test_entity_resolution.py  test_extraction.py  test_extraction_enrichment.py  test_grounding.py  test_imap_search.py  test_indexing.py  test_ingestion.py  test_ingestion_unknown_discard.py  test_integration_embeddings.py  test_integration_mongo.py  test_langfuse_wipe.py  test_llm_errors.py  test_mail_cost.py  test_mail_ingest_window.py  test_mail_poll_service.py  test_mail_summary.py  test_outlook_graph.py  test_pii.py  test_platform_settings.py  test_poll_window.py  test_prompt_loader_overrides.py  test_property_match.py  test_property_names.py  test_property_suggestions.py  test_response_generation.py  test_retrieval.py  test_review_eligibility.py  (+22 more)
tests/eval/: README.md  cases.json  compare.py  test_offline_eval.py
tests/fixtures/: booking_emails.json
tests/web/: conftest.py  test_admin_account_workflows.py  test_admin_diagnostics.py  test_admin_llm_config.py  test_admin_onboarding.py  test_admin_overview.py  test_auth.py  test_bookings_api.py  test_costs_api.py  test_dashboard_api.py  test_e2e_ingestion_review.py  test_e2e_review_http.py  test_emails_api.py  test_mail_api.py  test_mail_oauth.py  test_properties_api.py  test_registration.py  test_review_api.py  test_review_grounding.py  test_settings_api.py  test_support_tickets.py  test_tenant_workflows.py  test_tenant_workflows_gemini.py  test_wsgi.py
utils/: pii.py  text.py
web/: app.py
web/api/: __init__.py  admin.py  bookings.py  costs.py  dashboard.py  emails.py  mail.py  review.py  settings.py
web/auth/: account_access.py  models.py  routes.py  token_blocklist.py  tokens.py
web/middleware/: auth_guard.py  tenant.py
web/schemas/: accounts.py  mail.py
web/services/: api_helpers.py  query_service.py
workflows/: __init__.py  checkpointer.py  email_workflow.py  state.py
(+290 files in other folders)
