[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "email-platform"
version = "0.5.0"                       # wird ab Release-1 automatisch von semantic-release gepflegt
description = "AI Email Processing Platform (Booking-Domäne, branchenoffen)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "langgraph==0.2.76",
    "langchain==0.3.30",
    "langchain-openai==0.2.14",
    "openai==1.109.1",
    "pymongo==4.17.0",
    "langfuse==2.60.10",
    "python-dotenv==1.2.2",
    "tenacity==8.5.0",                 # Retry/Backoff für externe Aufrufe
    "msal==1.37.0",                    # Microsoft Graph (delegated + application)
    "flask==3.1.0",
    "flask-cors==5.0.1",
    "PyJWT==2.10.1",
    "werkzeug==3.1.3",
]

[project.optional-dependencies]
prod = [
    "gunicorn==23.0.0",
]
# Dev-Tooling exakt auf die Versionen in .pre-commit-config.yaml abgestimmt,
# damit lokal, in pre-commit und in der CI dasselbe läuft.
dev = [
    "ruff==0.6.9",
    "black==24.10.0",
    "mypy==1.13.0",
    "pytest==8.3.3",
    "pre-commit==4.0.1",
    "commitizen==3.29.1",
    "python-semantic-release==9.8.9",
    "mongomock==4.2.0.post1",           # Mongo für Tests ohne echtes Atlas
]

# ----------------------------------------------------------------------------
# Werkzeug-Konfiguration
# ----------------------------------------------------------------------------








[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["tests*", "docs*", ".cursor*", ".github*"]

[tool.setuptools.package-data]
"backend.ai.prompts" = ["**/*.md", "**/*.json"]


[tool.ruff]
target-version = "py311"
line-length = 88
src = ["."]

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, UP = pyupgrade, B = bugbear.
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402", "E501"]


[tool.black]
target-version = ["py311"]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["backend.ai.workflows.*"]
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disable_error_code = [
    "no-untyped-def",
    "arg-type",
    "attr-defined",
    "type-arg",
    "union-attr",
    "unused-ignore",
    "misc",
]

[[tool.mypy.overrides]]
module = ["backend.api.*"]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["scripts.*"]
disable_error_code = ["no-untyped-def", "type-arg"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-m", "not live_eval and not live_graph"]
markers = [
    "integration: requires live MongoDB (MONGODB_URI)",
    "live_eval: requires OPENAI_API_KEY and EVAL_LLM_MODE=live",
    "live_graph: requires live Microsoft Graph credentials",
]


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"

# python-semantic-release v9: liest die Conventional-Commit-History und
# aktualisiert project.version, setzt Tag + Changelog.

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "pip install build && python -m build"
upload_to_pypi = false                  # wir veröffentlichen kein PyPI-Paket
